Fix contact container spacing

--- a/styles/home.css
+++ b/styles/home.css
@@ -108,36 +108,35 @@
     min-height: 150px;
     gap: 20px;
     flex-wrap: wrap;
+    padding: 10px 30px;
 }
 
 .phone-container {
     height: 100px;
-    margin: 10px;
-    padding-left: 20px;
-}
-
-.phone-text {
-    color: white;
-    font-size: 1.5em;
-}
-
-.phone-number-container {
-    margin-top: 10px;
-    color: blue;
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 15px;
 }
 
 .phone-icon {
-    font-size: 1.5em;
+    font-size: 2.5em;
 }
 
-.phone-number {
-    margin-left: 15px;
-    font-size: 1.5em;   
+.phone-text-container {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
 }
 
+.phone-title {
+    font-size: 1.4em;
+    display: block;
+}
+
+.phone-text {
+    display: block;
+}
 
 .working-hours-container {
     height: 100px;
